--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "next": "16.0.0",
     "nodemailer": "^7.0.10",
     "pdf-lib": "^1.17.1",
-    "postcss": "^8.5.6",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -30,8 +29,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint-config-next": "16.0.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
     "typescript": "^5"
   }
