--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^5.14.3",
+    "@tailwindcss/postcss": "^4.1.16",
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "nodemailer": "^7.0.10",
     "pdf-lib": "^1.17.1",
+    "postcss": "^8.5.6",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.16",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint-config-next": "16.0.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
+    "postcss-nesting": "^13.0.2",
     "typescript": "^5"
   }
 }
