Fixed the redirecting

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,10 @@
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+# Add redirect rules for backend API calls
+[[redirects]]
+  from = "/api/*"
+  to = "https://qnect-backend.onrender.com/api/:splat"
+  status = 200
+  force = true
