--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-# Add redirect rules for backend API calls
+# Proxy API requests to Render
 [[redirects]]
   from = "/api/*"
   to = "https://qnect-backend.onrender.com/api/:splat"
