--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "^16.0.10",
     "nodemailer": "^7.0.10",
     "pdf-lib": "^1.17.1",
     "postcss": "^8.5.6",
